--- a/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
+++ b/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="213dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
 
         <ScrollView
             android:layout_width="match_parent"
