--- a/doAn/app/src/main/res/layout/activity_thong_ke_phieu_van_chuyen.xml
+++ b/doAn/app/src/main/res/layout/activity_thong_ke_phieu_van_chuyen.xml
@@ -23,16 +23,18 @@
             android:layout_marginBottom="10dp"
             android:gravity="center"
             >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Vật tư: "
-                android:background="@drawable/border"
-                android:textSize="17dp"
-                android:gravity="center"
-                android:textColor="@color/black"
                 android:layout_marginRight="20dp"
-                android:padding="5dp"/>
+                android:background="@drawable/border"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Tên vật tư: "
+                android:textColor="@color/black"
+                android:textSize="17dp" />
+
             <Spinner
                 android:id="@+id/danhSachTenVatTuSp_ThongKePVC"
                 android:layout_width="wrap_content"
@@ -71,7 +73,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ngày NC"
+                android:text="Ngày VC"
                 android:textColor="@color/black"
                 android:textSize="16dp"
                 android:layout_weight="1"
@@ -81,7 +83,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tên VC"
+                android:text="Tên vật tư"
                 android:layout_weight="1"
                 android:textColor="@color/black"
                 android:textSize="16dp"
