--- a/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
+++ b/doAn/app/src/main/res/layout/activity_danh_sach_vat_tu.xml
@@ -8,104 +8,13 @@
     android:orientation="vertical"
     tools:context=".DanhSachVatTu">
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/danhSachVatTuLv_DSVT"
         android:layout_width="match_parent"
-        android:layout_margin="10dp"
-        android:layout_height="213dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_margin="10dp" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <TableLayout
-                android:id="@+id/tablelayout_DSVT"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:stretchColumns="1,3">
 
-                <TableRow
-                    android:id="@+id/tableRow0_DSVT"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="Mã VT"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="Tên"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="Đơn vị tính"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="5dp"
-                        android:text="Giá VT"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-                </TableRow>
-
-            </TableLayout>
-        </ScrollView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingVertical="25dp"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp">
-
-        <Button
-            android:id="@+id/xoaBtn_DSVT"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:onClick="xuLyXoaVatTu"
-            android:text="Xoá"
-            android:textColor="@color/black"
-            app:backgroundTint="#EAE2A2" />
-
-        <Button
-            android:id="@+id/suaBtn_DSVT"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:onClick="suaVatTu"
-            android:text="Sửa"
-            android:textColor="@color/black"
-            app:backgroundTint="#EAE2A2" />
-    </LinearLayout>
 
 </LinearLayout>
